# NVOS-Embedded

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
protos/: README.md  barometer.proto  gps.proto  heartbeat.proto  led.proto  light_sensor.proto  network.proto  reflection.proto  thermometer.proto  void.proto
src/: adb.rs  bus.rs  capabilities.rs  config.rs  device.rs  drivers.rs  gpio.rs  main.rs  rpc.rs  tests.rs
src/bus/: i2c.rs  i2c_sysfs.rs  pwm.rs  pwm_sysfs.rs  raw.rs  raw_sysfs.rs  uart.rs
src/drivers/: bmp280_sysfs.rs  gps_uart.rs  sysfs_led.rs  tsl2591_sysfs.rs
src/rpc/: barometer.rs  errors.rs  gps.rs  heartbeat.rs  led.rs  light_sensor.rs  network.rs  reflection.rs  thermometer.rs  void.rs
src/tests/: device_tests.rs  gpio_tests.rs
