[package]
name = "nvos_embedded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
rppal = "0.14.1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
unbox-box = "0.1.0"
uuid = { version = "1.4.0", features = ["v4"] }
intertrait = "0.2.2"
linkme = "0.2.2"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
simple_logger = "4.2.0"
log = "0.4.19"
serde_json = "1.0.104"
serde = { version = "1.0.180", features = ["derive"] }

[build-dependencies]
tonic-build = "0.9.2"
