[package]
name = "nvos_embedded"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
rppal = "0.15.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
unbox-box = "0.1.0"
uuid = { version = "1.4.0", features = ["v4"] }
intertrait = "0.2.2"
linkme = "0.2.2"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
simple_logger = "4.2.0"
log = "0.4.19"
serde_json = "1.0.104"
serde = { version = "1.0.180", features = ["derive"] }
sysfs_gpio = "0.6.1"
i2c-linux = "0.1.2"
sysfs-pwm = "0.1.0"
mozdevice = "0.5.1"
tonic-web = "0.10.2"
nmea = "0.6.0"
ctrlc = { version = "3.4.0", features = ["termination"] }

[build-dependencies]
tonic-build = "0.10.2"
